--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li>Youjhbjklr menu</li>
-				<li>kimhyeonju</li>
-				<li>Your menu</li>
+
+				<li>Your mendsfsdfsdfu</li>
 				<li>Yoursssss</li>
 			</ul>
 		</nav>
